test_regress/t/t_vlt_warn_range_bad.out
%Warning-UNUSEDSIGNAL: t/t_vlt_warn_range_bad.v:24:7: Signal is not driven, nor used: 'unuse_warn5_var_line24'
                                                    : ... note: In instance 't'
   24 |   reg unuse_warn5_var_line24;   
      |       ^~~~~~~~~~~~~~~~~~~~~~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=latest
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Warning-UNUSEDSIGNAL: t/t_vlt_warn_range_bad.v:26:7: Signal is not driven, nor used: 'unuse_warn5_var_line26'
                                                    : ... note: In instance 't'
   26 |   reg unuse_warn5_var_line26;   
      |       ^~~~~~~~~~~~~~~~~~~~~~
%Error: Exiting due to
